# investment-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  adversarial-debate-plan.md  app.py  config.py  models.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
adversarial_debate/: __init__.py  app_debate.py  models.py  orchestrator.py
adversarial_debate/agents/: __init__.py  search_debate_agent.py  sentiment_debate_agent.py  valuation_debate_agent.py
adversarial_debate/tests/: __init__.py  conftest.py  test_agents.py  test_orchestrator.py
agent-os/: config.yml
agent-os/product/: mission.md  roadmap.md  tech-stack.md
agent-os/specs/2026-02-25-project-scaffold-and-secrets-management/: spec.md  tasks.md
agent-os/specs/2026-02-25-project-scaffold-and-secrets-management/planning/: initialization.md  requirements.md
agent-os/specs/2026-02-25-search-agent-founder-analysis/: spec.md  tasks.md
agent-os/specs/2026-03-10-adversarial-debate/: spec.md  tasks.md
agent-os/standards/backend/: api.md  migrations.md  models.md  queries.md
agent-os/standards/frontend/: accessibility.md  components.md  css.md  responsive.md
agent-os/standards/global/: coding-style.md  commenting.md  conventions.md  error-handling.md  tech-stack.md  validation.md
agent-os/standards/testing/: test-writing.md
agents/: search_agent.py  sentiment_agent.py  valuation_agent.py
orchestrator/: orchestrator.py
tests/: conftest.py  test_config.py
tests/tools/: test_anthropic.py  test_tavily.py
tools/: anthropic.py  tavily.py
(+5 files in other folders)
